# sang-box

./: .gitmodules  CMakeLists.txt
.github/workflows/: sang-box.yml
src/: CMakeLists.txt  ControlMenu.qml  Main.qml  MainWindowView.qml  MenuButton.qml  config_list_model.cpp  config_list_model.h  main.cpp  main_window.cpp  main_window.h  main_window_new.cpp  main_window_new.h  settings_dialog.cpp  settings_dialog.h  tray_icon.cpp  tray_icon.h
src/config/: CMakeLists.txt  config_editor.cpp  config_editor.h  config_io.cpp  config_io.h  config_manager.cpp  config_manager.h
src/proxy/: proxy_manager.cpp  proxy_manager.h
src/settings/: settings_manager.cpp  settings_manager.h
src/themes/: DarkSangTheme.qml
src/utils/: CMakeLists.txt  html_color_text.cpp  html_color_text.h
